--- a/recipes/cookie-dough-brownies.html
+++ b/recipes/cookie-dough-brownies.html
@@ -24,16 +24,49 @@
         <li>1/2 tsp salt</li>
         <li>1 cup all purpose flour</li>
     </ul>
+    
+        
     <h4>Cookie Dough Layer</h4>
     <ul>
         <li>3/4 cup (1.5 sticks) unsalted butter, at room temperature or almost melted</li>
         <li>3/4 cup granulated white sugar</li>
         <li>1/4 tsp salt</li>
         <li>2 tbls milk or cream (or Bailey's)</li>
-        <li>1.5 tsp vanilla extract</li>
+        <li>1 1/2 tsp vanilla extract</li>
         <li>1 cup all purpose flour</li>
         <li>1 cup miniature chocolate chips</li>
     </ul>
-
+    <h3>Directions</h3>
+    <h4>Prepare the brownie layer</h4>
+    <ol>
+        <li>Preheat the oven to 350 degrees F. Spray a 9x9-inch pan with nonstick spray, 
+            then line with a strip of parchment paper so that it covers the bottom and 
+            comes up two sides of the pan. Spray the parchment with nonstick spray too.</li>
+        <li>In a microwave safe bowl (or in the top of a double boiler or pan set on 
+            top of a pan of simmering water), microwave in 30 second bursts to melt 
+            butter and chocolate chips together until all is melted and smooth. Whisk 
+            in the sugars, then whisk in the eggs, vanilla and salt. Sift flour into 
+            the bowl and stir that in too. Scrape the brownie batter into the prepared 
+            pan. Bake for 25 to 30 minutes, or until the brownie layer is cooked through 
+            (toothpick inserted into the center comes out clean). Place the pan of brownies 
+            in the refrigerator to speed up the cooling process (or cool at room temperature 
+            and add the cookie dough layer later)</li>
+    </ol>
+    <h4>Prepare the cookie dough layer</h4>
+    <ol>
+        <li>In a large bowl, use an electric mixer to combine the butter, sugars and salt until 
+            soft and creamy (1 to 2 minutes).</li>
+        <li>Mix in the milk and vanilla. Sprinkle in the flour and mix in until combined.</li>
+        <li>Stir in the 1 cup of chocolate chips.</li>
+        <li>Scoop the cookie dough onto the top of the brownies and spread onto the brownie layer. 
+            I find that it's easiest to do this if the brownie layer is chilled and firm. Wet your 
+            hands or spray them with nonstick spray and pat the cookie dough on top in a even layer.</li>
+        <li>Sprinkle additional chocolate chips on top to create a nicer, visual appearance. For 
+            easy, clean cutting, chill the brownies (wrap the brownies with plastic wrap and chill 
+            until firm- 1 to 2 hours or up to 2 days)</li>
+    </ol>
+    <p>recipe from <a href="https://www.recipegirl.com/chocolate-chip-cookie-dough-brownies-take-two/" target="_blank" rel="noopener noreferrer">Recipe Girl</a></p>
+    <p><a href="./cookie-dough-brownies.html">Return to top</p>
+    <p><a href="../index.html">Return to main</a></p>
 </body>
 </html>
