Updated index and finished reese's cookies Corresponding pictures added to index.html.Reese's Cookies recipe directions added, directional links finished. README updated with goals

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href=recipes/cookie-dough-brownies.html> Cookie Dough Brownies</a></li>
+        <img src="./recipes/images/cookie-dough-brownie.jpg" alt="cookie-dough-brownie" width="150">
         <li><a href=recipes/chocolate-mug-cake.html>Chocolate Mug Cake</a></li>
+        <img src="./recipes/images/mugcake.jpg" alt="Chocolate mug cake" width="150">
         <li><a href=recipes/reeses-cookies.html>Reese's Cookies</a></li>
+        <img src="./recipes/images/reesescookies.jpg" alt="Chocolate Reese's Cookies" width="150">
     </ul>
 </body>
 </html>
